# tnavmesh

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml
assets/maps/: complex.tmx  simple.tmx
include/tnavmesh/: commands.h  detour_builder.h  geos_utils.h  navmesh_config.h  pathfinder.h  recast_builder.h  svg_writer.h  tmx_parser.h  version.h
src/: commands.cpp  detour_builder.cpp  geos_utils.cpp  main.cpp  pathfinder.cpp  recast_builder.cpp  svg_writer.cpp  tmx_parser.cpp
test/: smoke.sh
